@@ -2,9 +2,17 @@
 \title{bartCause News}
 \encoding{UTF-8}
 \section{CHANGES IN VERSION 1.0-3}{
+  \subsection{NEW FEATURES}{
+    \itemize{
+      \item Confounders can be passed in as literals when using
+            \code{data} argument. This can be assistance in
+            using complicated formulae with many variables.
+    }
+  }
   \subsection{BUG-FIXES}{
     \itemize{
     	\item Passing check with \code{tmle} version >= 1.5.0.
+      \item Fixed effects should now execute correctly.
     }
   }
 }
